invisibility unset fix

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -70,7 +70,7 @@
   transition: none;
   unicode-bidi: normal;
   vertical-align: baseline;
-  visibility: visible;
+  visibility: inherit;
   white-space: normal;
   widows: 0;
   width: auto;
